import { sequelize } from '@/core';
import { CreationOptional, DataTypes, InferAttributes, InferCreationAttributes, Model, UUIDV4 } from 'sequelize';

export class Role extends Model<InferAttributes<Role>, InferCreationAttributes<Role>> {
    declare id: CreationOptional<string>;
    declare name: string;
    declare description: CreationOptional<string>;
}

Role.init(
    {
        id: {
            type: DataTypes.UUID,
            allowNull: false,
            primaryKey: true,
            defaultValue: UUIDV4,
        },
        name: {
            type: DataTypes.STRING,
            allowNull: false,
            unique: 'true',
        },

        description: {
            type: DataTypes.STRING,
            allowNull: true,
        },
    },
    {
        modelName: 'role',
        tableName: 'role',
        sequelize,
        timestamps: true,
        freezeTableName: true,
    },
);
